--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -57,7 +57,7 @@
             </div>
             <div class="flex-grow-1 ms-3">
                 <p class=" fw-bold text-gray-900">Andy Chen</p>
-                <a href="mailto:andy0401@mail.com" class="text-gray-600">andy0401@mail.com</a>
+                <a href="mailto:andy0401@mail.com" class="text-gray-600 fs-7">andy0401@mail.com</a>
             </div>
         </div>
         
