--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,45 +1,45 @@
-<aside class="navbar navbar-expand-lg bg-body-tertiary vh-100 py-4 position-fixed">
+<aside class="navbar navbar-expand-lg bg-body-tertiary vh-100 py-5 position-fixed">
     <div class="container-fluid flex-column align-items-start px-0 h-100">
         <div class="w-100">
-            <a class="navbar-brand px-4 mb-4" href="/pages/index.html"><img src="/assets/images/logo-ANSWER.svg" alt="logo"></a>
+            <a class="navbar-brand px-5 mb-5" href="/pages/index.html"><img src="/assets/images/logo-ANSWER.svg" alt="logo"></a>
         
             <ul class="navbar-nav flex-column fw-bold gap-3">
                 <li class="nav-item">
-                    <a class="nav-link px-4 border-start border-3 text-gray-900" 
+                    <a class="nav-link px-5 border-start border-3 border-light text-gray-900" 
                         href="#">
                         <span class="material-symbols-outlined align-bottom pe-3">insert_chart</span>
                         Dashboard
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-gray-900 px-4 border-start border-3 " href="#">
+                    <a class="nav-link text-gray-900 px-5 border-start border-3 border-light" href="#">
                         <span class="material-symbols-outlined align-bottom pe-3">forum</span>
                         Question
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-gray-900 px-4 border-start border-3 active
-                        <%= page === 'assignment' ? 'border-success text-success' : '' %>" 
+                    <a class="nav-link text-gray-900 px-5 border-start border-3
+                        <%= page === 'assignment' ? 'border-success text-success' : 'border-light' %>" 
                         aria-current="page" href="index.html">
                         <span class="material-symbols-outlined align-bottom pe-3">assignment</span>
                         Assignment
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-gray-900 px-4 border-start border-3 ">
+                    <a class="nav-link text-gray-900 px-5 border-start border-3  border-light" href="#">
                         <span class="material-symbols-outlined align-bottom pe-3">video_library</span>
                         Course
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-gray-900 px-4 border-start border-3 
-                        <%= page === 'admin' ? 'border-success text-success' : ''%>" href="admin.html">
+                    <a class="nav-link text-gray-900 px-5 border-start border-3
+                        <%= page === 'admin' ? 'border-success text-success' : 'border-light'%>" href="admin.html">
                         <span class="material-symbols-outlined align-bottom pe-3">group</span>
                         Admin
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-gray-900 px-4 border-start border-3 ">
+                    <a class="nav-link text-gray-900 px-5 border-start border-3  border-light" href="#">
                         <span class="material-symbols-outlined align-bottom pe-3">Settings</span>
                         Settings
                     </a>
