--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,7 +1,7 @@
 <aside class="navbar navbar-expand-lg bg-body-tertiary vh-100 py-5 position-fixed">
     <div class="container-fluid flex-column align-items-start px-0 h-100">
         <div class="w-100">
-            <a class="navbar-brand px-5 mb-5" href="/pages/index.html"><img src="/assets/images/logo-ANSWER.svg" alt="logo"></a>
+            <a class="navbar-brand px-5 mb-5" href="./index.html"><img src="/assets/images/logo-ANSWER.svg" alt="logo"></a>
         
             <ul class="navbar-nav flex-column fw-bold gap-3">
                 <li class="nav-item">
